-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0-rc1
-
None
-
bd309397ede43954d6ea00df1b95d462b65477ac
Have a BBNDK with two BBNDK Target installed while both targets share the same QNX_HOST directly.
Then activating and/or deactivating any of those BBNDK Target will damages setup of the other other BBNDK Targets.
More details:
1) QtVersions, Toolchains, Debuggers are created per per BBNDK Target but in fact they are unique per each QNX_HOST directory. This affects BlackBerryConfiguration.isActivated() which is incorrectly reported for related non-activated Targets.
2) Similarly if two BBNDK Targets (that share the same QNX_HOST) are activated and an user deactivates one of them, the other is claimed as deactivated even through its kits are still registered.
For testing, use 127.0.1.8093 and 127.0.1.8099 versions.