Qnx: Set auto detection source for generated kits

Set the auto detection source for generated kits
to the target's ndk env file path. This ease the way
to deactivate configurations and handles targets sharing
the same QNX_HOST.

Task-number: QTCREATORBUG-10818

Change-Id: I823fb498f54e52c704a806234e7b4a0a6c8da4e7
Reviewed-by: David Kaspar <dkaspar@blackberry.com>
Reviewed-by: Nicolas Arnaud-Cormos <nicolas@kdab.com>